--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<div class="jumbotron text-center">
+<div class="text-center">
   <h1>GPS Test</h1>
   <p>This page tracks your GPS location</p> 
 </div>
@@ -34,9 +34,11 @@
   <div class="row">
     <div class="col-sm-12">
       <p id="demo"></p>
-      <div id="mapholder">
+      <div id="mapholder"></div>
       <p id="msg"></p>
     </div>
+  </div>  
+</div>
 
 <script>
 var hotspot = {
@@ -225,8 +227,6 @@ function displayPositionCoords(position) {
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjLeRLiyFRozzXOWwozrC4bVkzGevJTss&callback=initMap">
 </script>
 
-	</div>
-		
-</div>
+
 </body>
 </html>
