--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ var hotspot = {
   corner1Lon: -2.571883,
   corner2Lat: 51.441662,
   corner2Lon: -2.571748,
-  enterLoadPage: false,
-  exitLoadPage: false,
-  enterPlayAudio: false,
-  exitPlayAudio: false
+  onEnterLoadPage: false,
+  onExitLoadPage: false,
+  onEnterPlayAudio: false,
+  onExitPlayAudio: false
 }
 
 </script>
