--- a/index.html
+++ b/index.html
@@ -91,10 +91,16 @@ function checkPosition(position) {
 
   if ( (lat > hotspot.corner2Lat && lat < hotspot.corner1Lat) && (lon < hotspot.corner2Lon && lon > hotspot.corner1Lon) ) {
     document.getElementById('msg').innerHTML = "In the hotspot";
-    inHotspot = true;
+    if (localStorage.getItem("hotspotState") != "haveEntered") {
+      Alert("entering hotspot");
+    };
+    localStorage.setItem("hotspotState": "haveEntered");
   } else {
     document.getElementById('msg').innerHTML = "NOT in the hotspot";
-    inHotspot = false;
+    if (localStorage.getItem("hotspotState") == "haveEntered") {
+      Alert("exiting hotspot");
+      localStorage.setItem("hotspotState": "haveExited");
+    };
   };
 }
 
