--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var hotspot = {
   makeVisible: true,
   showMap: true,
   mapZoom: 18, //1-20
-  corner1Lat: 51.441615, //51.441615
+  corner1Lat: 51.44615, //51.441615
   corner1Lon:  -2.572170,
   corner2Lat: 51.441356,
   corner2Lon: -2.571422,
@@ -107,14 +107,12 @@ function checkPosition(position) {
   if ( (lat > hotspot.corner2Lat && lat < hotspot.corner1Lat) && (lon < hotspot.corner2Lon && lon > hotspot.corner1Lon) ) {
     document.getElementById('msg').innerHTML = "In the hotspot";
     if (localStorage.getItem("hotspotState") != "haveEntered") {
-      alert("entering");
       return "entering";
     };
     localStorage.setItem("hotspotState", "haveEntered");
   } else {
     document.getElementById('msg').innerHTML = "NOT in the hotspot";
     if (localStorage.getItem("hotspotState") == "haveEntered") {
-      alert("exiting");
       return "exiting";
       localStorage.setItem("hotspotState", "haveExited");
     };
@@ -172,8 +170,8 @@ function panMap(position){
 }
 
 
-function playAudio() {
-
+function playAudio(track) {
+    //
 }
 
 
