--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ function displayPositionCoords(position) {
   var x = document.getElementById("demo");
   x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude + "<br><br>";
 }
+
+playAudio(hotspot.onExitPlayAudio);
 </script>
 
 
